--- a/Views/AddTimerViewController/AddTimerViewController.storyboard
+++ b/Views/AddTimerViewController/AddTimerViewController.storyboard
@@ -131,7 +131,7 @@
                                     <constraint firstItem="p3s-0H-qLQ" firstAttribute="leading" secondItem="5gf-MD-VMJ" secondAttribute="leading" constant="18" id="h5p-p5-ayv"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uOU-Rd-zsU" userLabel="PreFireDurationView">
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uOU-Rd-zsU" userLabel="PreFireDurationView">
                                 <rect key="frame" x="14" y="476" width="345" height="85"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PreFire Style" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="snl-wR-nmR">
@@ -143,7 +143,7 @@
                                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yBI-TQ-dkv" customClass="CustomSegmentedControl" customModule="RealmTimers" customModuleProvider="target">
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yBI-TQ-dkv" customClass="CustomSegmentedControl" customModule="RealmTimers" customModuleProvider="target">
                                         <rect key="frame" x="18" y="40" width="309" height="30"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <userDefinedRuntimeAttributes>
